Moved to vuejs Add query from UI

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,8 +11,9 @@
             // see https://code.visualstudio.com/docs/editor/tasks#_can-a-background-task-be-used-as-a-prelaunchtask-in-launchjson
             "isBackground": true,
             // change this to your `beforeDevCommand`:
-            "command": "yarn",
+            "command": "npm",
             "args": [
+                "run",
                 "dev"
             ]
         },
@@ -20,8 +21,9 @@
             "label": "ui:build",
             "type": "shell",
             // change this to your `beforeBuildCommand`:
-            "command": "yarn",
+            "command": "npm",
             "args": [
+                "run",
                 "build"
             ]
         }
