--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,16 +12,17 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = {version = "1.2.1", features = [] }
+tauri-build = {version = "1.2.1", features = []}
 
 [dependencies]
-bitflags = "1.3"
+bitflags = "2.0.0"
 chrono = "0.4.23"
+env_logger = "0.10.0"
 libc = "0.2"
 log = "0.4"
-serde = { version = "1.0", features = ["derive"] }
+serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-tauri = {version = "1.2.1", features = [] }
+tauri = {version = "1.2.1", features = []}
 
 [features]
 # by default Tauri runs in production mode
