Added formatting for rows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
                 ]
             },
             "env": {
-                "RUST_LOG": "debug"
+                "RUST_LOG": "debug",
+                "TAURI_DEBUG": "true",
             },
             // task for the `beforeDevCommand` if used, must be configured in `.vscode/tasks.json`
             "preLaunchTask": "ui:dev"
