--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-project",
+  "name": "journal-viewer",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,24 +12,24 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
-    "bootstrap": "^5.2.3",
-    "vue": "^3.2.45"
+    "@tauri-apps/api": "~1.2",
+    "bootstrap": "~5.2",
+    "vue": "~3.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@tauri-apps/cli": "^1.2.1",
-    "@types/node": "^18.11.9",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "typescript": "~4.7.4",
-    "vite": "^3.2.4",
-    "vue-tsc": "^1.0.9"
+    "@rushstack/eslint-patch": "~1.1",
+    "@tauri-apps/cli": "~1.2",
+    "@types/node": "~18.11",
+    "@vitejs/plugin-vue": "~3.2",
+    "@vue/eslint-config-prettier": "~7.0",
+    "@vue/eslint-config-typescript": "~11.0",
+    "@vue/tsconfig": "~0.1.3",
+    "eslint": "~8.22",
+    "eslint-plugin-vue": "~9.3",
+    "npm-run-all": "~4.1",
+    "prettier": "~2.7",
+    "typescript": "~4.7",
+    "vite": "~3.2",
+    "vue-tsc": "~1.0"
   }
 }
