--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tauri-apps/api": "~1.2",
     "bootstrap": "~5.2",
+    "bootstrap-icons": "~1.10",
     "vue": "~3.2"
   },
   "devDependencies": {
