Keep a journal ptr open between queries Use async to run multiple queries in parallel on different journals Split query from query builder Add option to flush matches Fix issue of infinite scrolling with journal pointer between queries

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,10 @@
             "command": "npm run tauri dev",
             "name": "tauri dev",
             "request": "launch",
-            "type": "node-terminal"
+            "type": "node-terminal",
+            "env": {
+                "RUST_BACKTRACE": "1",
+            }
         },
         {
             "type": "lldb",
