--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,21 @@
 name: release
 on: [push]
+env:
+  JOURNAL_VERSION: "0.1.1"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          components: clippy
       - name: build
         run: ./.github/scripts/build.sh
+        shell: bash
+      - name: build-artifacts
+        run: ./.github/scripts/build-artifacts.sh
         shell: bash
