--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: clippy
+      - name: add-dependencies
+        run: sudo apt-get install -y build-essential curl wgetlibssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
       - name: build
         run: ./.github/scripts/build.sh
         shell: bash
