--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
 authors = ["Victor Mingueza"]
-default-run = "app"
-description = "Journald viewer"
+default-run = "journal-viewer"
+description = "A modern desktop log viewer for systemd journal"
 edition = "2021"
-license = "Apache 2.0"
-name = "app"
-repository = ""
+license = "GPL 3.0"
+name = "journal-viewer"
+repository = "https://github.com/mingue/journal-viewer"
 rust-version = "1.68"
-version = "0.1.0"
+version = "0.3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = {version = "1.2", features = [] }
+tauri-build = {version = "1.2", features = []}
 
 [dependencies]
 bitflags = "2"
@@ -20,9 +20,9 @@ chrono = "0.4"
 env_logger = "0.10"
 libc = "0.2"
 log = "0.4"
-serde = {version = "1", features = ["derive"] }
+serde = {version = "1", features = ["derive"]}
 serde_json = "1"
-tauri = {version = "1.2", features = [] }
+tauri = {version = "1.2", features = []}
 
 [features]
 # by default Tauri runs in production mode
