--- a/.github/workflows/release-ubuntu20.04.yaml
+++ b/.github/workflows/release-ubuntu20.04.yaml
@@ -1,4 +1,4 @@
-name: release
+name: release2004
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
