Add boots filter Update dependencies

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,8 @@
             "type": "node-terminal",
             "env": {
                 "RUST_BACKTRACE": "1",
+                "RUST_LOG": "debug",
+                "RUST_LOG_STYLE": "always"
             }
         },
         {
