use anyhow for errors use enum of errors

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
             // see https://code.visualstudio.com/docs/editor/tasks#_can-a-background-task-be-used-as-a-prelaunchtask-in-launchjson
             "isBackground": true,
             // change this to your `beforeDevCommand`:
+            "problemMatcher":"$vite",
             "command": "npm",
             "args": [
                 "run",
@@ -21,6 +22,7 @@
             "label": "ui:build",
             "type": "shell",
             // change this to your `beforeBuildCommand`:
+            "problemMatcher":"$vite",
             "command": "npm",
             "args": [
                 "run",
