--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ version = "0.3.0"
 tauri-build = {version = "1", features = [] }
 
 [dependencies]
+anyhow = "1.0.75"
 bitflags = "2"
 chrono = "0.4"
 env_logger = "0.10"
@@ -23,6 +24,7 @@ log = "0.4"
 serde = {version = "1", features = ["derive"] }
 serde_json = "1"
 tauri = {version = "1", features = [] }
+thiserror = "1"
 
 [features]
 # by default Tauri runs in production mode
