--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,7 +26,7 @@
             "command": "npm",
             "args": [
                 "run",
-                "build"
+                "build-only"
             ]
         }
     ]
