--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p build-only",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -12,27 +12,28 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "~1.2",
-    "@vueform/multiselect": "~2.6",
-    "@vuepic/vue-datepicker": "^4.4.0",
-    "bootstrap": "~5.2",
-    "bootstrap-icons": "~1.10",
-    "vue": "~3.2"
+    "@tauri-apps/api": "~1",
+    "@vueform/multiselect": "~2",
+    "@vuepic/vue-datepicker": "~8",
+    "bootstrap": "~5",
+    "bootstrap-icons": "~1",
+    "vue": "~3"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "~1.1",
-    "@tauri-apps/cli": "~1.2",
-    "@types/node": "~18.11",
-    "@vitejs/plugin-vue": "~3.2",
-    "@vue/eslint-config-prettier": "~7.0",
-    "@vue/eslint-config-typescript": "~11.0",
-    "@vue/tsconfig": "~0.1.3",
-    "eslint": "~8.22",
-    "eslint-plugin-vue": "~9.3",
-    "npm-run-all": "~4.1",
-    "prettier": "~2.7",
-    "typescript": "~4.7",
-    "vite": "~3.2",
-    "vue-tsc": "~1.0"
+    "@rushstack/eslint-patch": "~1",
+    "@tauri-apps/cli": "~1",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.12.7",
+    "@vitejs/plugin-vue": "~5",
+    "@vue/eslint-config-prettier": "~9",
+    "@vue/eslint-config-typescript": "~13",
+    "@vue/tsconfig": "~0.5",
+    "eslint": "~8",
+    "eslint-plugin-vue": "~9",
+    "npm-run-all": "~4",
+    "prettier": "~3",
+    "typescript": "~5",
+    "vite": "~5",
+    "vue-tsc": "~2"
   }
 }
