--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,18 +12,21 @@ version = "0.3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = {version = "1", features = [] }
+tauri-build = {version = "1", features = []}
 
 [dependencies]
 anyhow = "1"
 bitflags = "2"
 chrono = "0.4"
 env_logger = "0.11"
+lazy_static = "1"
 libc = "0.2"
 log = "0.4"
-serde = {version = "1", features = ["derive"] }
+nom = "7"
+rayon = "1"
+serde = {version = "1", features = ["derive"]}
 serde_json = "1"
-tauri = {version = "1", features = [] }
+tauri = {version = "1", features = []}
 thiserror = "1"
 
 [features]
