--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ nom = "7"
 rayon = "1"
 serde = {version = "1", features = ["derive"] }
 serde_json = "1"
+serde_with = {version = "3", features = ["chrono"] }
 tauri = {version = "1", features = [] }
 thiserror = "1"
 
