--- a/package/journal-viewer.desktop
+++ b/package/journal-viewer.desktop
@@ -3,7 +3,7 @@ Name=Journal Viewer
 Comment=Visualize systemd logs
 Exec=journal-viewer
 Terminal=false
-Icon=logviewer
+Icon=utilities-log-viewer
 StartupNotify=false
 Type=Application
 Categories=System;
