add file descriptors to process info

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "tauri": "export RUST_LOG='debug' && tauri"
+    "tauri-dev": "export RUST_LOG='debug' && tauri dev",
+    "tauri-build": "tauri build"
   },
   "dependencies": {
     "@tauri-apps/api": "~1",
