--- a/.github/workflows/release-ubuntu22.04.yaml
+++ b/.github/workflows/release-ubuntu22.04.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: add-dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev libsoup2.4-1
       - name: build
         run: ./.github/scripts/build-release.sh
         shell: bash
