feat(tauri): upgrade to tauri 2

--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "~1",
+    "@tauri-apps/api": "^2",
     "@vueform/multiselect": "~2",
-    "@vuepic/vue-datepicker": "~8",
+    "@vuepic/vue-datepicker": "~11",
     "bootstrap": "~5",
     "bootstrap-icons": "~1",
     "vue": "~3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "~1",
-    "@tauri-apps/cli": "~1",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.12.7",
+    "@tauri-apps/cli": "^2.4.0",
+    "@tsconfig/node20": "^20",
+    "@types/node": "^22",
     "@vitejs/plugin-vue": "~5",
-    "@vue/eslint-config-prettier": "~9",
-    "@vue/eslint-config-typescript": "~13",
-    "@vue/tsconfig": "~0.5",
-    "eslint": "~8",
-    "eslint-plugin-vue": "~9",
+    "@vue/eslint-config-prettier": "~10",
+    "@vue/eslint-config-typescript": "~14",
+    "@vue/tsconfig": "~0.7",
+    "eslint": "~9",
+    "eslint-plugin-vue": "~10",
     "npm-run-all": "~4",
     "prettier": "~3",
     "typescript": "~5",
