--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,6 @@ chrono = "0.4"
 env_logger = "0.11"
 lazy_static = "1"
 libc = "0.2"
-log = "0.4"
 nom = "7"
 rayon = "1"
 serde = {version = "1", features = ["derive"] }
@@ -29,6 +28,8 @@ serde_json = "1"
 serde_with = {version = "3", features = ["chrono"] }
 tauri = {version = "2", features = [] }
 thiserror = "1"
+tracing = {version = "0.1.41", features = ["log", "attributes"] }
+tracing-subscriber = {version = "0.3.19", features = ["std", "env-filter"] }
 
 [features]
 # by default Tauri runs in production mode
