--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "journal-viewer",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "run-p build-only",
